--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.xeinebiu.demo.media_streamer"
+        applicationId "com.xeinebiu.demo.media_stream"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -34,5 +34,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation project(':media_streamer')
+    implementation project(':media_stream')
 }
