--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.xeinebiu.demo.media_stream.MainActivity">
+        <activity
+            android:name="com.xeinebiu.demo.media_stream.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +23,7 @@
             </intent-filter>
         </activity>
 
-        <service
-            android:name="com.xeinebiu.media_stream.MediaStreamService"/>
+        <service android:name="com.xeinebiu.media_stream.MediaStreamService" />
     </application>
 
 </manifest>
