--- a/media_stream/build.gradle
+++ b/media_stream/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 33
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -30,22 +30,19 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation group: 'androidx.documentfile', name: 'documentfile', version: '1.0.1'
 
-    implementation 'com.yanzhenjie.andserver:api:2.1.1'
-    kapt 'com.yanzhenjie.andserver:processor:2.1.1'
+    implementation "io.ktor:ktor:2.2.2"
+    implementation "io.ktor:ktor-server-netty:2.2.2"
 
-    implementation 'javax.activation:javax.activation-api:1.2.0'
 }
 
 project.afterEvaluate {
@@ -55,7 +52,7 @@ project.afterEvaluate {
                 from components.release
 
                 groupId = 'com.github.xeinebiu'
-                version = '1.1.0'
+                version = '1.3.0'
             }
         }
     }
