--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,25 @@
-include ':media_stream'
-include ':app'
+pluginManagement {
+    repositories {
+        mavenCentral()
+        maven { url "https://maven.google.com" }
+        maven { url "https://plugins.gradle.org/m2/" }
+        google()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        mavenCentral()
+        maven { url "https://maven.google.com" }
+        maven { url "https://plugins.gradle.org/m2/" }
+        google()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+include ':app',
+        ':media_stream'
+
 rootProject.name = "Media Stream"
