--- a/media_stream/build.gradle
+++ b/media_stream/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-parcelize'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'maven-publish'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'maven-publish'
+}
 
 android {
     compileSdkVersion 33
@@ -30,7 +32,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 
@@ -40,8 +42,8 @@ dependencies {
 
     implementation group: 'androidx.documentfile', name: 'documentfile', version: '1.0.1'
 
-    implementation "io.ktor:ktor:2.2.2"
-    implementation "io.ktor:ktor-server-netty:2.2.2"
+    implementation "io.ktor:ktor:2.2.4"
+    implementation "io.ktor:ktor-server-netty:2.2.4"
 
 }
 
@@ -52,7 +54,7 @@ project.afterEvaluate {
                 from components.release
 
                 groupId = 'com.github.xeinebiu'
-                version = '1.3.0'
+                version = '1.4.0'
             }
         }
     }
